# nexora

./: .gitbook.yaml  .gitignore  .npmrc  Cargo.toml  README.md  SUMMARY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json  vercel.json
.cursor/skills/gitbook/: SKILL.md  reference.md
agent/: package.json
agent/src/: intentDemo.ts  intentProvider.ts
chain/: .env.example  README.md  deploy-l3.ts  docker-compose.yml  orbit-config.json  package.json  tsconfig.json
chain/blockscout/: proxy.conf.template
contracts-sol/: README.md
contracts-sol/src/: IAccountFactory.sol  INexoraAccount.sol  IPQVerifier.sol  IPolicyEngine.sol  IVerifierRegistry.sol
contracts-stylus/account-factory/: Cargo.toml
contracts-stylus/account-factory/src/: lib.rs
contracts-stylus/falcon-core/: Cargo.toml
contracts-stylus/falcon-core/fuzz/: Cargo.toml  README.md
contracts-stylus/falcon-core/fuzz/fuzz_targets/: verify_perturbed_sig.rs  verify_random_inputs.rs
contracts-stylus/falcon-core/src/: lib.rs
contracts-stylus/falcon-core/src/falcon/: codec.rs  hash_to_point.rs  mod.rs  ntt.rs  params.rs  shake.rs  verify.rs
contracts-stylus/falcon-core/tests/: interop.rs  kat.rs
contracts-stylus/nexora-account/: Cargo.toml
contracts-stylus/nexora-account/src/: erc1271.rs  execution.rs  lib.rs  recovery.rs  storage.rs  validation.rs
contracts-stylus/policy-engine/: Cargo.toml
contracts-stylus/policy-engine/src/: lib.rs
contracts-stylus/pq-verifier/: Cargo.toml
contracts-stylus/pq-verifier-falcon512/: Cargo.toml
contracts-stylus/pq-verifier-falcon512/src/: lib.rs
contracts-stylus/pq-verifier/src/: lib.rs
contracts-stylus/shared/: Cargo.toml
contracts-stylus/shared/src/: errors.rs  lib.rs  op_hash.rs  types.rs
contracts-stylus/verifier-registry/: Cargo.toml
contracts-stylus/verifier-registry/src/: lib.rs
dashboard/: .env.production.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
dashboard/app/: error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
dashboard/app/tx/[hash]/: page.tsx
dashboard/components/: AccountCard.tsx  ConnectCard.tsx  DeployAccountCard.tsx  DeploymentBanner.tsx  FundAccountCard.tsx  KeygenCard.tsx  OpHistory.tsx  SectionErrorBoundary.tsx  SendForm.tsx  VerifierTracePanel.tsx
dashboard/lib/: deployments.bundled.json  deployments.ts  explorer.ts  falcon512Browser.ts  falcon512Storage.ts  falconStorage.ts  nexoraChain.ts  nexoraEndpoints.ts  trace.ts  useDeployments.ts  wagmi.ts
dashboard/public/wasm/falcon512/: nexora_falcon512.d.ts  nexora_falcon512.js  nexora_falcon512_bg.wasm  nexora_falcon512_bg.wasm.d.ts  package.json
deploy/vps/: DNS.md  README.md  apply-nginx.sh  install-docker-debian.sh  install.sh  verify-dns.sh
deploy/vps/nginx/: blockchain.nexorapq.in.conf  blockchain.nexorapq.in.servers.conf  explorer.nexorapq.in.servers.conf  nexora-websocket-upgrade.map.conf
docs/: architecture.md  blockscout.md  contracts.md  dashboard-flow.md  demo-script.md  eip8141-mapping.md  falcon-precompile-roadmap.md  hosted-configuration.md  overview.md  threat-model.md
relayer/: .env.example  package.json
relayer/src/: executor.ts  server.ts  types.ts
scripts/: build-wasm.sh  debug-sig.ts  deploy-all.ts  dev-up.sh
signer/falcon-signer/: Cargo.toml
signer/falcon-signer-wasm/: Cargo.toml
signer/falcon-signer-wasm/src/: lib.rs
signer/falcon-signer/src/: main.rs
wallet-sdk/: package.json
wallet-sdk/src/: chain.ts  client.ts  index.ts  opHash.ts  policy.ts  types.ts
wallet-sdk/src/abi/: accountFactory.ts  index.ts  nexoraAccount.ts  policyEngine.ts  pqVerifier.ts  verifierRegistry.ts
wallet-sdk/src/signers/: ecdsa.ts  envelope.ts  falcon512.ts  falconMock.ts  index.ts
wallet-sdk/wasm/: README.md
