[workspace]
members = [
    "contracts-stylus/shared",
    "contracts-stylus/falcon-core",
    "contracts-stylus/pq-verifier",
    "contracts-stylus/pq-verifier-falcon512",
    "contracts-stylus/verifier-registry",
    "contracts-stylus/policy-engine",
    "contracts-stylus/nexora-account",
    "contracts-stylus/account-factory",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nexora contributors"]
license = "MIT"
repository = "https://github.com/nexora/nexora"
rust-version = "1.90"

[workspace.dependencies]
stylus-sdk = { version = "=0.6.1", default-features = false }
alloy-primitives = { version = "=0.7.6", default-features = false }
alloy-sol-types = { version = "=0.7.6", default-features = false }
sha3 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
nexora-shared = { path = "contracts-stylus/shared", default-features = false }
nexora-falcon-core = { path = "contracts-stylus/falcon-core", default-features = false }

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"

[profile.dev]
panic = "abort"
