[package]
name = "nexora-account"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Nexora smart account: hybrid ECDSA + PQ validator with policy gating."

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
stylus-sdk = { workspace = true, features = ["mini-alloc"] }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
sha3 = { workspace = true }
nexora-shared = { workspace = true }

[features]
default = []
# `recovery` enables the timelocked owner / PQ-pubkey rotation surface.
# Off by default for MVP because it pushes the WASM over the Stylus
# activation size limit. Enable when the verifier/policy paths are
# slimmer or when we move recovery into a dedicated module contract.
recovery = []
export-abi = ["stylus-sdk/export-abi"]
