[package]
name = "nexora-policy-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Classifies UserOps into LOW / HIGH / CRITICAL bands."

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
stylus-sdk = { workspace = true, features = ["mini-alloc"] }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }

[features]
default = []
export-abi = ["stylus-sdk/export-abi"]
