[package]
name = "nexora-pq-verifier-falcon512"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Real Falcon-512 verifier (Stylus, no_std). Verify-only port of the Falcon NIST submission."

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
stylus-sdk = { workspace = true, features = ["mini-alloc"] }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
sha3 = { workspace = true }
nexora-shared = { workspace = true }
nexora-falcon-core = { workspace = true }

[features]
default = []
export-abi = ["stylus-sdk/export-abi"]
