[package]
name = "nexora-verifier-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Maps VerifierScheme -> verifier contract address. Owner-gated."

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
stylus-sdk = { workspace = true, features = ["mini-alloc"] }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }

[features]
default = []
export-abi = ["stylus-sdk/export-abi"]
