[package]
name = "nexora-falcon-signer-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "wasm-bindgen Falcon-512 signer for the Nexora dashboard (browser path)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
falcon-rust = "0.1.2"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
sha3 = "0.10"
hex = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[workspace]
