[package]
name = "nexora-falcon-signer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Host-side Falcon-512 signer for Nexora (CLI + HTTP)."

[[bin]]
name = "falcon-signer"
path = "src/main.rs"

[dependencies]
falcon-rust = "0.1.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
tiny_http = "0.12"
sha3 = "0.10"
anyhow = "1"

[workspace]

